# my_jupyter_container

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
