[tool.poetry]
name = "docker_notebook"
version = "0.1.0"
description = ""
authors = ["Sharad Chand <sharad_chand@hotmail.com>"]
license = "MIT"
[tool.poetry.dependencies]
python = "^3.6"
notebook = "^6.1.3"
pandas = "^1.1.2"
scipy = "1.5.2"
scikit-learn = "^0.24.1"
dtale = "^1.15.2"
jupyter = "^1.0.0"
jupyterlab = "^2.2.8"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"
plotly = "^4.10.0"
Pillow = "^7.2.0"
ipywidgets = "^7.5.1"
petl = "^1.7.2"
[tool.poetry.dev-dependencies]
ansible = "^3.0.0"
docker-py = "^1.10.6"
PyYAML = "^5.3.1"
jinja2 = "^2.11.2"
cryptography = "^3.1"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
